# Proyecto1_Paralela_2

./: CMakeLists.txt  README.md
include/: App.h  Args.h  Color.h  Particle.h  Timer.h
src/: App.cpp  Args.cpp  Blob.cpp  Blob.h  Color.cpp  LavaLamp.cpp  LavaLamp.h  Molecule.cpp  Molecule.h  Palette.cpp  Palette.h  Particle.cpp  Renderer.cpp  Renderer.h  Timer.cpp  main.cpp
